# TanksOnline

./: .gitignore  README.md
project/: project.godot
project/src/objects/: bullet_1.tscn  player.tscn  ple.tscn  tilemap.tscn
project/src/scenes/: menu.tscn
project/src/scenes/maps/: map01.tscn
project/src/scripts/: bullet.gd  menu.gd  player.gd  ple.gd  resources.gd  rmanager.gd  tilemap.gd
project/src/sprites/: tanks.png.import  tanks_bullet_1.png.import  tanks_weapon_1.ase  tanks_weapon_1.png.import  tilemap.png.import
server/: .env.example  maps.json  pyproject.toml
server/tanksonline/: __init__.py  main.py  route.py
server/tanksonline/actions/: __init__.py  res.py
server/tanksonline/core/room/: __init__.py  manager.py  room.py
server/tanksonline/models/: __init__.py  event.py  inp.py  player.py  room.py  settings.py
