[tool.poetry]
name = "tanksonline"
version = "0.1.0"
description = "Server for TanksOnline"
authors = ["Alekyo4 <alexsandergomes4742@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
websockets = "^11.0.3"

[tool.poetry.scripts]
dev = "tanksonline.main:main"

[tool.taskipy.tasks]
format = "black . && isort ."

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
